@@ -20,8 +20,8 @@ log4j.logger.org.apache.catalina=INFO
 #log4j.logger.org.springframework.osgi.test=TRACE
 #log4j.logger.org.springframework.osgi.iandt=TRACE
 #log4j.logger.org.springframework.osgi.extender.internal.support=TRACE
-log4j.logger.org.springframework.web=TRACE
-log4j.logger.org.springframework.web.servlet=TRACE
+#log4j.logger.org.springframework.web=TRACE
+#log4j.logger.org.springframework.web.servlet=TRACE
 #log4j.logger.org.springframework.context.annotation=TRACE
 
 #log4j.logger.org.springframework.osgi.util.DebugUtils=TRACE
